--- a/core/pom.xml
+++ b/core/pom.xml
@@ -3,13 +3,11 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>microservices</artifactId>
         <groupId>com.zelenko</groupId>
+        <artifactId>microservices</artifactId>
         <version>1.0.0-SNAPSHOT</version>
+        <relativePath>../</relativePath><!-- lookup parent from repository -->
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
     <artifactId>core</artifactId>
-
-
 </project>
