--- a/pom.xml
+++ b/pom.xml
@@ -20,9 +20,15 @@
     <modules>
         <module>rest-service</module>
         <module>core</module>
+        <module>auth-service</module>
     </modules>
 
     <dependencies>
+        <dependency>
+            <groupId>com.nimbusds</groupId>
+            <artifactId>nimbus-jose-jwt</artifactId>
+            <version>7.0</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
